# modorganizer-helper

./: CMakeLists.txt
include/helper/: privileges.h
src/: main.cpp  privileges.cpp
